apps/cli/src/tui/widgets/snapshots/keyhints__disabled_action.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
 d diff  m merge (rebase in progress)  q quit                            ? help
=== styles (truecolor, unicode) ===
0:1-1 fg=#2dc2ad BOLD
0:9-9 fg=#8a8a8a
0:11-15 fg=#8a8a8a
0:17-36 fg=#8a8a8a
0:39-39 fg=#2dc2ad BOLD
0:73-73 fg=#2dc2ad BOLD
=== styles (256, unicode) ===
0:1-1 fg=@43 BOLD
0:9-9 fg=@245
0:11-15 fg=@245
0:17-36 fg=@245
0:39-39 fg=@43 BOLD
0:73-73 fg=@43 BOLD
=== styles (16, unicode) ===
0:1-1 fg=Cyan BOLD
0:9-9 fg=DarkGray
0:11-15 fg=DarkGray
0:17-36 fg=DarkGray
0:39-39 fg=Cyan BOLD
0:73-73 fg=Cyan BOLD
=== styles (no-color, unicode) ===
0:1-1 BOLD
0:9-9 DIM
0:11-15 DIM
0:17-36 DIM
0:39-39 BOLD
0:73-73 BOLD
=== styles (high-contrast, unicode) ===
0:0-0 fg=#ffffff bg=#000000
0:1-1 fg=#7ee8d8 bg=#000000 BOLD
0:2-8 fg=#ffffff bg=#000000
0:9-9 fg=#c6c6c6 bg=#000000
0:10-10 fg=#ffffff bg=#000000
0:11-15 fg=#c6c6c6 bg=#000000
0:16-16 fg=#ffffff bg=#000000
0:17-36 fg=#c6c6c6 bg=#000000
0:37-38 fg=#ffffff bg=#000000
0:39-39 fg=#7ee8d8 bg=#000000 BOLD
0:40-72 fg=#ffffff bg=#000000
0:73-73 fg=#7ee8d8 bg=#000000 BOLD
0:74-79 fg=#ffffff bg=#000000
=== text (ascii) ===
 d diff  m merge (rebase in progress)  q quit                            ? help
=== styles (truecolor, ascii) ===
0:1-1 fg=#2dc2ad BOLD
0:9-9 fg=#8a8a8a
0:11-15 fg=#8a8a8a
0:17-36 fg=#8a8a8a
0:39-39 fg=#2dc2ad BOLD
0:73-73 fg=#2dc2ad BOLD
