apps/cli/src/tui/widgets/snapshots/keyhints__help_overlay.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
   ┏━ › Keys ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
   ┃ Navigate                                                     ┃
   ┃   j k    move                                                ┃
   ┃   Tab    next panel                                          ┃
   ┃   Enter  open                                                ┃
   ┃                                                              ┃
   ┃ Act                                                          ┃
   ┃   m      merge into base                                     ┃
   ┃   r      rebase onto base                                    ┃
   ┃   x      discard worktree (not in --plain)                   ┃
   ┃   u      undo                                                ┃
   ┃                                                              ┃
   ┃ --plain is read-only: actions need the full TUI.             ┃
   ┃                                                              ┃
   ┃                                                    Esc close ┃
   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
=== styles (truecolor, unicode) ===
0:3-7 fg=#ffe066
0:8-11 fg=#ffe066 BOLD
0:12-66 fg=#ffe066
1:3-3 fg=#ffe066
1:5-12 BOLD
1:66-66 fg=#ffe066
2:3-3 fg=#ffe066
2:7-9 fg=#2dc2ad BOLD
2:66-66 fg=#ffe066
3:3-3 fg=#ffe066
3:7-9 fg=#2dc2ad BOLD
3:66-66 fg=#ffe066
4:3-3 fg=#ffe066
4:7-11 fg=#2dc2ad BOLD
4:66-66 fg=#ffe066
5:3-3 fg=#ffe066
5:66-66 fg=#ffe066
6:3-3 fg=#ffe066
6:5-7 BOLD
6:66-66 fg=#ffe066
7:3-3 fg=#ffe066
7:7-7 fg=#2dc2ad BOLD
7:66-66 fg=#ffe066
8:3-3 fg=#ffe066
8:7-7 fg=#2dc2ad BOLD
8:66-66 fg=#ffe066
9:3-3 fg=#ffe066
9:7-7 fg=#8a8a8a
9:14-29 fg=#8a8a8a
9:31-46 fg=#8a8a8a
9:66-66 fg=#ffe066
10:3-3 fg=#ffe066
10:7-7 fg=#2dc2ad BOLD
10:66-66 fg=#ffe066
11:3-3 fg=#ffe066
11:66-66 fg=#ffe066
12:3-3 fg=#ffe066
12:5-52 fg=#8a8a8a
12:66-66 fg=#ffe066
13:3-3 fg=#ffe066
13:66-66 fg=#ffe066
14:3-3 fg=#ffe066
14:56-58 fg=#2dc2ad BOLD
14:66-66 fg=#ffe066
15:3-66 fg=#ffe066
=== styles (256, unicode) ===
0:3-7 fg=@221
0:8-11 fg=@221 BOLD
0:12-66 fg=@221
1:3-3 fg=@221
1:5-12 BOLD
1:66-66 fg=@221
2:3-3 fg=@221
2:7-9 fg=@43 BOLD
2:66-66 fg=@221
3:3-3 fg=@221
3:7-9 fg=@43 BOLD
3:66-66 fg=@221
4:3-3 fg=@221
4:7-11 fg=@43 BOLD
4:66-66 fg=@221
5:3-3 fg=@221
5:66-66 fg=@221
6:3-3 fg=@221
6:5-7 BOLD
6:66-66 fg=@221
7:3-3 fg=@221
7:7-7 fg=@43 BOLD
7:66-66 fg=@221
8:3-3 fg=@221
8:7-7 fg=@43 BOLD
8:66-66 fg=@221
9:3-3 fg=@221
9:7-7 fg=@245
9:14-29 fg=@245
9:31-46 fg=@245
9:66-66 fg=@221
10:3-3 fg=@221
10:7-7 fg=@43 BOLD
10:66-66 fg=@221
11:3-3 fg=@221
11:66-66 fg=@221
12:3-3 fg=@221
12:5-52 fg=@245
12:66-66 fg=@221
13:3-3 fg=@221
13:66-66 fg=@221
14:3-3 fg=@221
14:56-58 fg=@43 BOLD
14:66-66 fg=@221
15:3-66 fg=@221
=== styles (16, unicode) ===
0:3-7 fg=LightYellow
0:8-11 fg=LightYellow BOLD
0:12-66 fg=LightYellow
1:3-3 fg=LightYellow
1:5-12 BOLD
1:66-66 fg=LightYellow
2:3-3 fg=LightYellow
2:7-9 fg=Cyan BOLD
2:66-66 fg=LightYellow
3:3-3 fg=LightYellow
3:7-9 fg=Cyan BOLD
3:66-66 fg=LightYellow
4:3-3 fg=LightYellow
4:7-11 fg=Cyan BOLD
4:66-66 fg=LightYellow
5:3-3 fg=LightYellow
5:66-66 fg=LightYellow
6:3-3 fg=LightYellow
6:5-7 BOLD
6:66-66 fg=LightYellow
7:3-3 fg=LightYellow
7:7-7 fg=Cyan BOLD
7:66-66 fg=LightYellow
8:3-3 fg=LightYellow
8:7-7 fg=Cyan BOLD
8:66-66 fg=LightYellow
9:3-3 fg=LightYellow
9:7-7 fg=DarkGray
9:14-29 fg=DarkGray
9:31-46 fg=DarkGray
9:66-66 fg=LightYellow
10:3-3 fg=LightYellow
10:7-7 fg=Cyan BOLD
10:66-66 fg=LightYellow
11:3-3 fg=LightYellow
11:66-66 fg=LightYellow
12:3-3 fg=LightYellow
12:5-52 fg=DarkGray
12:66-66 fg=LightYellow
13:3-3 fg=LightYellow
13:66-66 fg=LightYellow
14:3-3 fg=LightYellow
14:56-58 fg=Cyan BOLD
14:66-66 fg=LightYellow
15:3-66 fg=LightYellow
=== styles (no-color, unicode) ===
0:3-66 BOLD | REVERSED
1:3-3 BOLD | REVERSED
1:5-12 BOLD
1:66-66 BOLD | REVERSED
2:3-3 BOLD | REVERSED
2:7-9 BOLD
2:66-66 BOLD | REVERSED
3:3-3 BOLD | REVERSED
3:7-9 BOLD
3:66-66 BOLD | REVERSED
4:3-3 BOLD | REVERSED
4:7-11 BOLD
4:66-66 BOLD | REVERSED
5:3-3 BOLD | REVERSED
5:66-66 BOLD | REVERSED
6:3-3 BOLD | REVERSED
6:5-7 BOLD
6:66-66 BOLD | REVERSED
7:3-3 BOLD | REVERSED
7:7-7 BOLD
7:66-66 BOLD | REVERSED
8:3-3 BOLD | REVERSED
8:7-7 BOLD
8:66-66 BOLD | REVERSED
9:3-3 BOLD | REVERSED
9:7-7 DIM
9:14-29 DIM
9:31-46 DIM
9:66-66 BOLD | REVERSED
10:3-3 BOLD | REVERSED
10:7-7 BOLD
10:66-66 BOLD | REVERSED
11:3-3 BOLD | REVERSED
11:66-66 BOLD | REVERSED
12:3-3 BOLD | REVERSED
12:5-52 DIM
12:66-66 BOLD | REVERSED
13:3-3 BOLD | REVERSED
13:66-66 BOLD | REVERSED
14:3-3 BOLD | REVERSED
14:56-58 BOLD
14:66-66 BOLD | REVERSED
15:3-66 BOLD | REVERSED
=== styles (high-contrast, unicode) ===
0:3-7 fg=#ffe066 bg=#000000
0:8-11 fg=#ffe066 bg=#000000 BOLD
0:12-66 fg=#ffe066 bg=#000000
1:3-3 fg=#ffe066 bg=#000000
1:4-4 fg=#ffffff bg=#000000
1:5-12 fg=#ffffff bg=#000000 BOLD
1:13-65 fg=#ffffff bg=#000000
1:66-66 fg=#ffe066 bg=#000000
2:3-3 fg=#ffe066 bg=#000000
2:4-6 fg=#ffffff bg=#000000
2:7-9 fg=#7ee8d8 bg=#000000 BOLD
2:10-65 fg=#ffffff bg=#000000
2:66-66 fg=#ffe066 bg=#000000
3:3-3 fg=#ffe066 bg=#000000
3:4-6 fg=#ffffff bg=#000000
3:7-9 fg=#7ee8d8 bg=#000000 BOLD
3:10-65 fg=#ffffff bg=#000000
3:66-66 fg=#ffe066 bg=#000000
4:3-3 fg=#ffe066 bg=#000000
4:4-6 fg=#ffffff bg=#000000
4:7-11 fg=#7ee8d8 bg=#000000 BOLD
4:12-65 fg=#ffffff bg=#000000
4:66-66 fg=#ffe066 bg=#000000
5:3-3 fg=#ffe066 bg=#000000
5:4-65 fg=#ffffff bg=#000000
5:66-66 fg=#ffe066 bg=#000000
6:3-3 fg=#ffe066 bg=#000000
6:4-4 fg=#ffffff bg=#000000
6:5-7 fg=#ffffff bg=#000000 BOLD
6:8-65 fg=#ffffff bg=#000000
6:66-66 fg=#ffe066 bg=#000000
7:3-3 fg=#ffe066 bg=#000000
7:4-6 fg=#ffffff bg=#000000
7:7-7 fg=#7ee8d8 bg=#000000 BOLD
7:8-65 fg=#ffffff bg=#000000
7:66-66 fg=#ffe066 bg=#000000
8:3-3 fg=#ffe066 bg=#000000
8:4-6 fg=#ffffff bg=#000000
8:7-7 fg=#7ee8d8 bg=#000000 BOLD
8:8-65 fg=#ffffff bg=#000000
8:66-66 fg=#ffe066 bg=#000000
9:3-3 fg=#ffe066 bg=#000000
9:4-6 fg=#ffffff bg=#000000
9:7-7 fg=#c6c6c6 bg=#000000
9:8-13 fg=#ffffff bg=#000000
9:14-29 fg=#c6c6c6 bg=#000000
9:30-30 fg=#ffffff bg=#000000
9:31-46 fg=#c6c6c6 bg=#000000
9:47-65 fg=#ffffff bg=#000000
9:66-66 fg=#ffe066 bg=#000000
10:3-3 fg=#ffe066 bg=#000000
10:4-6 fg=#ffffff bg=#000000
10:7-7 fg=#7ee8d8 bg=#000000 BOLD
10:8-65 fg=#ffffff bg=#000000
10:66-66 fg=#ffe066 bg=#000000
11:3-3 fg=#ffe066 bg=#000000
11:4-65 fg=#ffffff bg=#000000
11:66-66 fg=#ffe066 bg=#000000
12:3-3 fg=#ffe066 bg=#000000
12:4-4 fg=#ffffff bg=#000000
12:5-52 fg=#c6c6c6 bg=#000000
12:53-65 fg=#ffffff bg=#000000
12:66-66 fg=#ffe066 bg=#000000
13:3-3 fg=#ffe066 bg=#000000
13:4-65 fg=#ffffff bg=#000000
13:66-66 fg=#ffe066 bg=#000000
14:3-3 fg=#ffe066 bg=#000000
14:4-55 fg=#ffffff bg=#000000
14:56-58 fg=#7ee8d8 bg=#000000 BOLD
14:59-65 fg=#ffffff bg=#000000
14:66-66 fg=#ffe066 bg=#000000
15:3-66 fg=#ffe066 bg=#000000
=== text (ascii) ===
   #= > Keys =====================================================#
   # Navigate                                                     #
   #   j k    move                                                #
   #   Tab    next panel                                          #
   #   Enter  open                                                #
   #                                                              #
   # Act                                                          #
   #   m      merge into base                                     #
   #   r      rebase onto base                                    #
   #   x      discard worktree (not in --plain)                   #
   #   u      undo                                                #
   #                                                              #
   # --plain is read-only: actions need the full TUI.             #
   #                                                              #
   #                                                    Esc close #
   #==============================================================#
=== styles (truecolor, ascii) ===
0:3-7 fg=#ffe066
0:8-11 fg=#ffe066 BOLD
0:12-66 fg=#ffe066
1:3-3 fg=#ffe066
1:5-12 BOLD
1:66-66 fg=#ffe066
2:3-3 fg=#ffe066
2:7-9 fg=#2dc2ad BOLD
2:66-66 fg=#ffe066
3:3-3 fg=#ffe066
3:7-9 fg=#2dc2ad BOLD
3:66-66 fg=#ffe066
4:3-3 fg=#ffe066
4:7-11 fg=#2dc2ad BOLD
4:66-66 fg=#ffe066
5:3-3 fg=#ffe066
5:66-66 fg=#ffe066
6:3-3 fg=#ffe066
6:5-7 BOLD
6:66-66 fg=#ffe066
7:3-3 fg=#ffe066
7:7-7 fg=#2dc2ad BOLD
7:66-66 fg=#ffe066
8:3-3 fg=#ffe066
8:7-7 fg=#2dc2ad BOLD
8:66-66 fg=#ffe066
9:3-3 fg=#ffe066
9:7-7 fg=#8a8a8a
9:14-29 fg=#8a8a8a
9:31-46 fg=#8a8a8a
9:66-66 fg=#ffe066
10:3-3 fg=#ffe066
10:7-7 fg=#2dc2ad BOLD
10:66-66 fg=#ffe066
11:3-3 fg=#ffe066
11:66-66 fg=#ffe066
12:3-3 fg=#ffe066
12:5-52 fg=#8a8a8a
12:66-66 fg=#ffe066
13:3-3 fg=#ffe066
13:66-66 fg=#ffe066
14:3-3 fg=#ffe066
14:56-58 fg=#2dc2ad BOLD
14:66-66 fg=#ffe066
15:3-66 fg=#ffe066
