apps/cli/src/tui/widgets/snapshots/keyhints__narrow.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
 j/k move  Enter open  d diff  m merge  r rebase  x discard  e editor    ? help
=== styles (truecolor, unicode) ===
0:1-3 fg=#2dc2ad BOLD
0:11-15 fg=#2dc2ad BOLD
0:23-23 fg=#2dc2ad BOLD
0:31-31 fg=#2dc2ad BOLD
0:40-40 fg=#2dc2ad BOLD
0:50-50 fg=#2dc2ad BOLD
0:61-61 fg=#2dc2ad BOLD
0:73-73 fg=#2dc2ad BOLD
=== styles (256, unicode) ===
0:1-3 fg=@43 BOLD
0:11-15 fg=@43 BOLD
0:23-23 fg=@43 BOLD
0:31-31 fg=@43 BOLD
0:40-40 fg=@43 BOLD
0:50-50 fg=@43 BOLD
0:61-61 fg=@43 BOLD
0:73-73 fg=@43 BOLD
=== styles (16, unicode) ===
0:1-3 fg=Cyan BOLD
0:11-15 fg=Cyan BOLD
0:23-23 fg=Cyan BOLD
0:31-31 fg=Cyan BOLD
0:40-40 fg=Cyan BOLD
0:50-50 fg=Cyan BOLD
0:61-61 fg=Cyan BOLD
0:73-73 fg=Cyan BOLD
=== styles (no-color, unicode) ===
0:1-3 BOLD
0:11-15 BOLD
0:23-23 BOLD
0:31-31 BOLD
0:40-40 BOLD
0:50-50 BOLD
0:61-61 BOLD
0:73-73 BOLD
=== styles (high-contrast, unicode) ===
0:0-0 fg=#ffffff bg=#000000
0:1-3 fg=#7ee8d8 bg=#000000 BOLD
0:4-10 fg=#ffffff bg=#000000
0:11-15 fg=#7ee8d8 bg=#000000 BOLD
0:16-22 fg=#ffffff bg=#000000
0:23-23 fg=#7ee8d8 bg=#000000 BOLD
0:24-30 fg=#ffffff bg=#000000
0:31-31 fg=#7ee8d8 bg=#000000 BOLD
0:32-39 fg=#ffffff bg=#000000
0:40-40 fg=#7ee8d8 bg=#000000 BOLD
0:41-49 fg=#ffffff bg=#000000
0:50-50 fg=#7ee8d8 bg=#000000 BOLD
0:51-60 fg=#ffffff bg=#000000
0:61-61 fg=#7ee8d8 bg=#000000 BOLD
0:62-72 fg=#ffffff bg=#000000
0:73-73 fg=#7ee8d8 bg=#000000 BOLD
0:74-79 fg=#ffffff bg=#000000
=== text (ascii) ===
 j/k move  Enter open  d diff  m merge  r rebase  x discard  e editor    ? help
=== styles (truecolor, ascii) ===
0:1-3 fg=#2dc2ad BOLD
0:11-15 fg=#2dc2ad BOLD
0:23-23 fg=#2dc2ad BOLD
0:31-31 fg=#2dc2ad BOLD
0:40-40 fg=#2dc2ad BOLD
0:50-50 fg=#2dc2ad BOLD
0:61-61 fg=#2dc2ad BOLD
0:73-73 fg=#2dc2ad BOLD
